<resources>
    <string name="app_name">微信</string>
    <string name="radio_weixin">微信</string>
    <string name="radio_comm">通讯录</string>
    <string name="radio_find">发现</string>
    <string name="radio_me">我</string>
    <string name="phone_num">手机号</string>
    <string name="password">密码</string>
    <string name="input_phoneNum">请输入手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="input_nickname">例:慢嗨</string>
    <string name="login">登录</string>
    <string name="add_user">注册</string>
    <string name="nickname">昵称</string>
    <string name="adding_user">正在注册</string>
    <string name="adding_login">正在登录</string>
    <string name="add_user_sucess">注册成功</string>

    <string name="error_num">请输入正确的手机号</string>
    <string name="error_has_user">该手机已注册</string>
    <string name="error_add_user">注册失败</string>
    <string name="error_login">用户名或密码错误</string>
    <string name="error_login_psd">密码错误</string>
    <string name="error">登录失败，请检测网络</string>
    <string name="error_net">网络已断开</string>
    <string name="error_add">添加失败</string>

    <string name="pic">图片</string>
    <string name="error_album">获取相册图片失败</string>
    <string name="error_camare_pe">获取拍照权限失败</string>
    <string name="search">搜索</string>
    <string name="add">添加</string>
    <string name="newfriend">新的好友</string>
    <string name="addfriend">添加好友</string>
    <string name="groudim">群聊</string>
    <string name="publicnum">公众号</string>

    <string name="search_hint">微信号/QQ号/手机号</string>
    <string name="my_weixinnum">我的微信号：</string>

    <string name="no_user">用户不存在</string>
    <string name="search_for_search">搜一搜</string>
    <string name="search_for_other">小程序、公众号、资讯、朋友圈和表情等</string>
    <string name="searching_user">正在查找联系人...</string>
    <string name="adding">正在添加...</string>
    <string name="detail_info">详细资料</string>
    <string name="set_remark">设置备注和标签</string>
    <string name="add_friend">添加到通讯录</string>
    <string name="video_message">视频通话</string>
    <string name="sendmessage">发消息</string>
    <string name="need_message">你需要发送验证申请,等待对方通过</string>
    <string name="verification">验证申请</string>
    <string name="send">发送</string>
    <string name="send_fail">发送失败</string>
    <string name="send_sucess">发送成功</string>
    <string name="loading">正在加载</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">图片</string>
    <string name="camera">视频</string>
    <string name="location">位置</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>


    <string name="friend_circle">朋友圈</string>
    <string name="wallet">钱包</string>
    <string name="collection">收藏</string>
    <string name="album">相册</string>
    <string name="expression">表情</string>
    <string name="scan">扫一扫</string>
    <string name="setting">设置</string>
    <string name="shake">摇一摇</string>
</resources>
