<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/search_user_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp">

            <TextView
                android:id="@+id/search_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/search_for_search"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/search_user_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/search_user_name"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:text="@string/search_for_search"
                android:textColor="@color/light_txt_color"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:padding="15dp"
        android:text="@string/set_remark"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/add_friend"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/adduser_button"
        android:text="@string/add_friend"
        android:textColor="@color/gray_white" />

    <Button
        android:id="@+id/video_friend"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:text="@string/video_message"
        android:textColor="@color/black"
        android:visibility="gone" />


</LinearLayout>