<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginBottom="5dp"
                        android:layout_gravity="bottom"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/nickname"
                        android:textColor="@color/txt_color"
                        android:textSize="16sp" />

                    <EditText
                        android:maxLength="8"
                        android:maxLines="1"
                        android:textColorHint="@color/light_txt_color"
                        android:textColor="@color/txt_color"
                        android:layout_marginBottom="5dp"
                        android:layout_gravity="bottom"
                        android:id="@+id/add_input_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@null"
                        android:hint="@string/input_nickname"
                        android:textSize="16sp" />
                </LinearLayout>
                <View
                    android:id="@+id/nickname_line"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/txt_color" />
            </LinearLayout>
            <RelativeLayout
                android:focusable="true"
                android:clickable="true"
                android:id="@+id/add_user_img_rl"
                android:background="@drawable/adduser_img"
                android:layout_width="68dp"
                android:layout_height="68dp">

                <ImageView
                    android:clickable="false"
                    android:layout_centerInParent="true"
                    android:background="@mipmap/camare"
                    android:layout_width="22dp"
                    android:layout_height="22dp" />
                <ImageView
                    android:id="@+id/add_user_img"
                    android:visibility="gone"
                    android:scaleType="fitXY"
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="bottom"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_num"
                    android:textColor="@color/txt_color"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/add_input_phonenum"
                    android:textColor="@color/txt_color"
                    android:textColorHint="@color/light_txt_color"
                    android:inputType="number"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="bottom"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:hint="@string/input_phoneNum"
                    android:textSize="16sp" />

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/clear_input_num"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:src="@mipmap/delete"
                    android:layout_width="18dp"
                    android:layout_height="18dp" />

            </LinearLayout>
            <View
                android:id="@+id/phonenum_line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/txt_color" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:text="@string/password"
                    android:textColor="@color/txt_color"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/add_input_password"
                    android:textColor="@color/txt_color"
                    android:textColorHint="@color/light_txt_color"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="bottom"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:hint="@string/input_password"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/eye_password"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/eye_no"
                    android:layout_width="22dp"
                    android:layout_height="22dp" />

            </LinearLayout>
            <View
                android:id="@+id/password_line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/txt_color" />
        </LinearLayout>

        <Button
            android:textSize="16sp"
            android:enabled="false"
            android:id="@+id/add_user_button"
            android:textColor="@color/gray_white"
            android:text="@string/add_user"
            android:layout_marginTop="20dp"
            android:background="@drawable/adduser_button"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>

</LinearLayout>