<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_white"
   >
    <ImageView
        android:background="@drawable/item_selector_gray"
        android:id="@+id/add_goback"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:src="@mipmap/delete"
        android:layout_width="28dp"
        android:layout_height="28dp" />

    <TextView
        android:layout_margin="20dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/gray_white"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:text="@string/phone_num"
                    android:textColor="@color/txt_color"
                    android:textSize="16sp" />

                <EditText
                    android:textColorHint="@color/light_txt_color"
                    android:textColor="@color/txt_color"
                    android:id="@+id/login_user_num"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_phoneNum"
                    android:inputType="number"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/login_user_num_delete"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:src="@mipmap/delete"
                    android:visibility="gone" />

            </LinearLayout>

            <View
                android:id="@+id/login_user_num_line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/txt_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="99dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:text="@string/password"
                    android:textColor="@color/txt_color"
                    android:textSize="16sp" />

                <EditText
                    android:textColorHint="@color/light_txt_color"
                    android:textColor="@color/txt_color"
                    android:id="@+id/login_user_password"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/login_user_password_look"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:src="@mipmap/eye_no" />

            </LinearLayout>

            <View
                android:id="@+id/login_user_password_line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/txt_color" />
        </LinearLayout>

        <Button
            android:enabled="false"
            android:id="@+id/login_user_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/adduser_button"
            android:text="@string/login"
            android:textColor="@color/gray_white" />
    </LinearLayout>


</LinearLayout>