<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/input_search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/item_selector_gray"
        android:visibility="gone">

        <ImageView
            android:id="@+id/input_search_img"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/icon_qunliao" />

        <TextView
            android:id="@+id/right_input_search_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/input_search_img"
            android:text="搜索："
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/input_search_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/right_input_search_txt"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/main_color"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_below="@+id/input_search_img"
            android:background="@color/selector_color" />
    </RelativeLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/search_no_user_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/search_no_user_text"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/no_user"
            android:textColor="@color/light_txt_color"
            android:textSize="14.5sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/backgroud_color" />

        <RelativeLayout
            android:id="@+id/input_search_onther_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/item_selector_gray">

            <ImageView
                android:id="@+id/input_search_onther_img"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:src="@mipmap/bug" />

            <TextView
                android:id="@+id/right_input_search_onther_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/input_search_onther_img"
                android:text="@string/search_for_search"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/input_search_onther_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/right_input_search_onther_txt"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <TextView
                android:textSize="14.5sp"
                android:textColor="@color/light_txt_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/right_input_search_onther_txt"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/input_search_onther_img"
                android:text="@string/search_for_other" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_below="@+id/input_search_onther_img"
                android:background="@color/selector_color" />
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>